# pixelbin-python-sdk

./: CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml  requirements.txt  sample.py
.github/workflows/: ci.yml
documentation/platform/: ASSETS.md  ORGANIZATION.md  TRANSFORMATION.md
pixelbin/: __init__.py
pixelbin/common/: __init__.py  aiohttp_helper.py  constants.py  date_helper.py  exceptions.py  utils.py
pixelbin/platform/: OAuthClient.py  PixelbinClient.py  PixelbinConfig.py  PlatformAPIClient.py  enums.py
pixelbin/platform/models/: AddCredentialsRequest.py  AddCredentialsResponse.py  AddPresetRequest.py  AddPresetResponse.py  AppDetailsByToken.py  AppOrgDetails.py  AppSchema.py  AssetsValidator.py  BaseSchema.py  CreateFolderRequest.py  Credentials.py  CredentialsItem.py  DeleteCredentialsResponse.py  DeleteMultipleFilesRequest.py  Delimiter.py  ErrorSchema.py  FileUploadRequest.py  FilesResponse.py  FoldersResponse.py  GetAncestorsResponse.py  GetCredentialsResponse.py  GetFilesWithConstraintsItem.py  GetFilesWithConstraintsRequest.py  GetPresetsResponse.py  GetTransformationContextSuccessResponse.py  ListFilesResponse.py  OrganizationDetailSchema.py  OrganizationValidator.py  PresignedUrl.py  PresignedUrlV2.py  SignedUploadRequest.py  SignedUploadRequestV2.py  SignedUploadResponse.py  SignedUploadV2Response.py  TransformationModuleResponse.py  TransformationModulesResponse.py  TransformationValidator.py  UpdateCredentialsRequest.py  UpdateFileRequest.py  (+10 more)
pixelbin/utils/: security.py  url.py
tests/: pixelbin_test.py  test_utils.py
